--- a/css/9001/bootstrap.css
+++ b/css/9001/bootstrap.css
@@ -7059,7 +7059,7 @@ button.list-group-item-danger {
 }
 
     .panel-default > .panel-heading {
-        color: #333333;
+        color: #005EB8;
         background-color: #f5f5f5;
         border-color: #ddd;
     }
