--- a/css/9001/bootstrap.css
+++ b/css/9001/bootstrap.css
@@ -1408,7 +1408,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.42857143;
-    color: #333333;
+    color: #005EB8;
     background-color: #fff;
 }
 
