--- a/css/9001/bootstrap.css
+++ b/css/9001/bootstrap.css
@@ -1408,7 +1408,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.42857143;
-    color: #005EB8;
+    color: #333333;
     background-color: #fff;
 }
 
@@ -7070,7 +7070,7 @@ button.list-group-item-danger {
 
         .panel-default > .panel-heading .badge {
             color: #f5f5f5;
-            background-color: #333333;
+            background-color: #005EB8;
         }
 
     .panel-default > .panel-footer + .panel-collapse > .panel-body {
