--- a/css/9002/customStyles.css
+++ b/css/9002/customStyles.css
@@ -14,6 +14,11 @@
     overflow: hidden;
 }
 
+/* TextBox Styles */
+.textBoxRightJustified {
+    Text-align: right;
+}
+
 /* DivPopUp */
 .mfp-wrap.edit-ticket-class .mfp-content {
     /*height: 800px;*/
