--- a/css/9002/jquery-ui.css
+++ b/css/9002/jquery-ui.css
@@ -182,9 +182,9 @@
 }
 
 .ui-datepicker-trigger {
-	position: absolute;
-	top: 25px;
-	left: 160px;
+	position: relative;
+	top: -28px;
+	left: 145px;
 }
 
 .ui-button,
