--- a/css/9002/customStyles.css
+++ b/css/9002/customStyles.css
@@ -87,3 +87,89 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+
+.headerTittleStyle {
+    background-color: #005EB8;
+    color: white;
+    padding: 20px;
+    margin-right: 0px;
+    border-radius: 10px;
+}
+
+.headerTittleStyleError {
+    background-color: red;
+    color: white;
+    padding: 15px;
+    border-radius: 10px;
+    margin-right: 30px;
+}
+
+.headerTittleStyleErrorPermission {
+    background-color: red;
+    color: white;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+.jumbotronTittle {
+    height: 110px;
+    background-color: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.5);
+    -moz-background-clip: padding; /* Firefox 3.6 */
+    -webkit-background-clip: padding; /* Safari 4? Chrome 6? */
+    background-clip: padding-box; /* Firefox 4, Safari 5, Opera 10, IE 9 */
+    border-top: 20px solid rgba(0,0,0,0.5);
+    border-left: 20px solid rgba(0,0,0,0.5);
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    border-radius: 30px;
+    color: white;
+    font-style: italic;
+}
+
+.jumbotronSub {
+    color: white;
+    background-color: #005EB8;
+    height: 180px
+}
+
+.jumbotronFeatures {
+    color: white;
+    padding: 15px;
+    background-color: #005EB8;
+    background-image: linear-gradient(to bottom right, #005EB8, #0278E8);
+}
+
+.jumbotronSubFeatures {
+    margin-top: 0px;
+}
+
+.jumbotron {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    margin-top: 30px;
+    color: inherit;
+    background-color: #eeeeee;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center 100%;
+}
+
+#FondoTitulo {
+    /*height: 200px;*/
+    background-color: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.5);
+    -moz-background-clip: padding; /* Firefox 3.6 */
+    -webkit-background-clip: padding; /* Safari 4? Chrome 6? */
+    background-clip: padding-box; /* Firefox 4, Safari 5, Opera 10, IE 9 */
+
+    border: 30px solid rgba(0,0,0,0.5);
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    border-radius: 40px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    color: white;
+    font-style: italic;
+}
