--- a/css/9002/customStyles.css
+++ b/css/9002/customStyles.css
@@ -199,3 +199,53 @@
     border-radius:30px;
     margin-bottom:30px;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial;
+}
+
+.MyModal {
+    position: fixed;
+    z-index: 999;
+    height: 100%;
+    width: 100%;
+    padding: 10px;
+    top: 0;
+    left:0;
+    filter: alpha(opacity=60);
+    opacity: 0.6;
+    -moz-opacity: 0.8;
+}
+
+.divFloat {
+    margin: 0 auto;
+    background-color: #FFF;
+    border: solid 1px #999;
+    color: #000;
+    width: 80%;
+    height: 300px;
+    padding: 20px;
+    -webkit-border-radius: 20px;
+    -webkit-box-orient: vertical;
+    -webkit-transition: 200ms -webkit-transform;
+    box-shadow: 0 4px 23px 5px rgba(0, 0, 0, 0.2), 0 2px 6px rgba(0, 0, 0, 0.15);
+    display: block;
+    align-content:center;
+    align-items:center;
+    text-align: center;
+    font-weight: bold;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left:10%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+.divFloat img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 15%;
+}
