--- a/css/9002/customStyles.css
+++ b/css/9002/customStyles.css
@@ -250,7 +250,6 @@ body {
     width: 15%;
 }
 .Btn-Activate:hover{
-    content:"Activar!";
     color: #fff;
     background-color: #0b5ed7;
     border-color: #0a58ca;
@@ -259,12 +258,12 @@ body {
 .Btn-Activate:hover:before {
   content:"Activar!";
 }
-
+/*
 .Btn-Activate:hover::after {
   content:"Activar!";
 }
+*/
 .Btn-Deactivate:hover{
-    content:"Desactivar!";
     color: #fff;
     background-color: #dc3545;
     border-color: #dc3545;
@@ -273,7 +272,8 @@ body {
 .Btn-Deactivate:hover:before {
   content:"Desactivar!";
 }
-
+/*
 .Btn-Deactivate:hover::after {
   content:"Desactivar!";
 }
+*/
